--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="mainViewModel"
             type="com.example.myapplication.viewmodel.MainViewModel" />
@@ -22,6 +23,7 @@
             android:layout_height="wrap_content"
             android:hint="Enter Number"
             android:inputType="number"
+            android:text="@={mainViewModel.editTextValue}"
             app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
+            android:onClick="@{()->mainViewModel.onSubmitClick()}"
             android:text="Click"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edtEnterInput" />
